<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessing">"Accessing the phone via local network:
 • Press the \"Start server\" button in the application.
 • Point the web browser on computer to the address provided in settings interface or notification. It should look like http://&lt;your_ip>:&lt;port>
 • \"How do I connect\" button helps with the network setup based on your IP.
 • Enter your username/password, and select the desired method of viewing your camera.
 • If you cannot open the link, try to ping the phone's IP address, and if it fails, check the network configuration.
 Internet access via Ivideon:
 • Attach phone to Ivideon account using \"Cloud streaming\" settings.
 • Press the \"Start server\" button in the application.
 • Log in to your Ivideon account at http://ivideon.com/my or Ivideon app.
"</string>
    <string name="accessing_title">Accessing your phone</string>
    <string name="acknowledgements">"IP Webcam uses following software:
 libjpeg, © Independent JPEG Group, http://lij.org
 ffmpeg, © FFmpeg team, http://ffmpeg.org/
 libvpx, © WebM project, http://www.webmproject.org/
 libopus, © Xiph.org Foundation and others, http://opus-codec.org/
 mongoose (MIT fork), © Sergey Lyubka, https://github.com/cesanta/mongoose
 
 Special thanks to:
 Han Chengyu for Chinese translation
 Nenad Tomasic for German translation
 Paolo Stavolo for Italian translation
 Froozeify for French translation
 Rafał Płatek http://www.getpoland.com for Polish translation
 Francisco Rosúa for Spanish translation
 Sangyong, Byun for Korean translation
 Alexey Vasilyev for amazing viewer, tinyCam Monitor
 
 Thanks to:
 Robb Larsen, Jason Tarnutzer for Droid X testing
 Marcus Pascall, Eugene Jennings, Peter Boeren, Scott B, Eric Batts, Alexei Vidmich for application testing.
 Berthold Möller for his help with pinpointing the nasty issue."</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="action">Action...</string>
    <string name="action_increase_decrease">Increase or decrease</string>
    <string name="action_set">Set fixed value</string>
    <string name="action_settings">Settings</string>
    <string name="action_toggle">Toggle between two values</string>
    <string name="actions">Actions</string>
    <string name="actions_">Actions…</string>
    <string name="active_sensors">Active data logging sources</string>
    <string name="active_ui">Active interface</string>
    <string name="ad_text_1">No ads</string>
    <string name="ad_text_2">No video watermarks</string>
    <string name="ad_text_3">Tasker support</string>
    <string name="ad_text_4">Customizable UI</string>
    <string name="ad_text_5">Single purchase</string>
    <string name="ad_text_6">No device limit</string>
    <string name="ad_text_7">Lifetime license</string>
    <string name="add_control">Add</string>
    <string name="addrf">Primary address family</string>
    <string name="adet_amount">Audio trigger amount</string>
    <string name="adet_radio">Sound is detected/timed out</string>
    <string name="adet_record_video_desc">Record video to internal storage when sound detection is triggered</string>
    <string name="advanced_camera">Camera2: $CAM (recommended)</string>
    <string name="allow_gps">Allow GPS</string>
    <string name="allow_gps_desc">Your exact location will be accessible via web interface sensors page and recorded in photos (enable this in Video preferences)</string>
    <string name="allow_signed_scripts_only">Allow signed scripts only</string>
    <string name="always_show">Always show</string>
    <string name="antibanding">Antibanding</string>
    <string name="antibanding_mode">Antibanding</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">IP Webcam</string>
    <string name="app_name_pro">IP Webcam Pro</string>
    <string name="are_you_sure_you_want_to_remove_this_script">Are you sure you want to remove this script? This will also remove all settings you saved for this script.</string>
    <string name="aspect_11">1:1</string>
    <string name="aspect_12">1:2</string>
    <string name="aspect_13">1:3</string>
    <string name="aspect_14">1:4</string>
    <string name="aspect_21">2:1</string>
    <string name="aspect_31">3:1</string>
    <string name="aspect_41">4:1</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="audio_bitrate_template">$KBITS kbit/s</string>
    <string name="audio_connections">Audio connections</string>
    <string name="audio_mode_audio_only">Audio only</string>
    <string name="audio_mode_disabled">Disabled</string>
    <string name="audio_mode_enabled">Enabled</string>
    <string name="audio_only">Audio only</string>
    <string name="audio_sensor">Sound detection</string>
    <string name="audio_tasker_timeout">Sound event timeout</string>
    <string name="audiopref">Audio mode</string>
    <string name="auto_exposure_lock">Lock exposure</string>
    <string name="auto_white_balance_lock">Lock white balance</string>
    <string name="autostart">Stream on device boot</string>
    <string name="autostart_desc">To turn the device into dedicated IP camera, check this option and disable Settings->Security->Screen lock</string>
    <string name="background">Run in background</string>
    <string name="backgroundbtn">"Application will now run in background.
 You can quickly put the IP Webcam in background by pressing \"Home\" key."</string>
    <string name="battery_percent_sensor">Battery percent sensor</string>
    <string name="battery_temperature_sensor">Battery temperature sensor</string>
    <string name="battery_voltage_sensor">Battery voltage sensor</string>
    <string name="begin_serving_video_stream">Begin serving video stream</string>
    <string name="beware_of_fakes">Beware of fakes!</string>
    <string name="beware_of_fakes_desc">Learn about IP Webcam imitations</string>
    <string name="bottom">Bottom</string>
    <string name="brightness">Brightness</string>
    <string name="button">Button</string>
    <string name="camera">Camera</string>
    <string name="camera_active_idle">Camera active/idle</string>
    <string name="camera_is_used_by_another_app">Camera is used by another app: cannot initialize! Sorry!</string>
    <string name="camera_settings">Camera settings</string>
    <string name="camera_status">Camera status</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_access_internet">Cannot access internet</string>
    <string name="cannot_open_camera">IP Webcam: Cannot open camera</string>
    <string name="cannot_open_configured_camera">Cannot open previously configured camera! Would you like to use the default one? This may result in previous settings being overwritten.</string>
    <string name="cannot_open_port">Cannot open port. Close programs using it or choose another one.</string>
    <string name="carrier_grade_nat">(carrier-grade NAT)</string>
    <string name="cheat_is_not_recognized">Cheat is not recognized</string>
    <string name="cheats">Cheats</string>
    <string name="chunk_size">Chunk size</string>
    <string name="chunk_size_desc">Splitting continuously recorded videos into $VAL minute chunks</string>
    <string name="chunk_size_edit">Enter length (in minutes) of continuously recorded videos</string>
    <string name="cisco_codec_required_download_q">In order to activate OpenH264, a codec binary must be downloaded to your device. Proceed with the download?</string>
    <string name="clear_onvif">Clear ONVIF data</string>
    <string name="cloud_account_already_exists">This email is already registered. If you own this account, please log in.</string>
    <string name="cloud_create_account_eula">" By creating an account you agree to "<a href="https://go.ivideon.com/?target=terms_of_service&amp" lang="en">Ivideon terms of service</a>.</string>
    <string name="cloud_create_an_account">Create an account</string>
    <string name="cloud_create_an_account_desc">"It's free and takes but a minute"</string>
    <string name="cloud_create_an_account_email_hint">Your email (Ivideon login)</string>
    <string name="cloud_create_an_account_password_hint">Create a password</string>
    <string name="cloud_creating_account">Creating account...</string>
    <string name="cloud_faq">Ivideon FAQ</string>
    <string name="cloud_faq_desc">What is Ivideon, privacy options, where to access your stream etc.</string>
    <string name="cloud_log_in">Log in</string>
    <string name="cloud_log_in_password_isnt_saved">Password is not saved on your device</string>
    <string name="get_pro">Get Pro</string>
    <string name="get_pro_short">Get Pro</string>
    <string name="how_do_i_connect">Help</string>
    <string name="modet_radio">Motion is detected/timed out</string>
    <string name="more">More...</string>
    <string name="motion_detected_tasker_desc">Which condition should IP Webcam report?</string>
    <string name="ok">OK</string>
    <string name="other_actions">Other actions...</string>
    <string name="start_server">Start server</string>
    <string name="stop_camera">Stop camera</string>
    <string name="what_should_i_do">What should IP Webcam do?</string>
</resources>