<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:text="@string/what_should_i_do" android:layout_alignLeft="@id/radioGroup" android:layout_alignParentTop="true" />
    <Button android:id="@id/ok_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/ok" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <RadioGroup android:id="@id/radioGroup" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_below="@id/textView" android:layout_alignParentLeft="false" android:layout_centerHorizontal="true">
        <RadioButton android:id="@id/rbStart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_server" />
        <RadioButton android:id="@id/rbStop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_camera" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/radioGroup" android:layout_alignLeft="@id/radioGroup">
            <RadioButton android:id="@id/rbOther" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@id/other_actions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_actions" />
        </LinearLayout>
    </RadioGroup>
</RelativeLayout>