<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:background="#66000000" android:layout_width="320.0dip" android:layout_height="50.0dip">
        <ImageView android:id="@id/imageView2" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/ic_pro" android:contentDescription="@string/get_pro" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginRight="10.0dip" android:text="@string/app_name_pro" android:layout_toRightOf="@id/imageView2" />
        <TextSwitcher android:id="@id/textSwitcher" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inAnimation="@android:anim/slide_in_left" android:layout_toLeftOf="@id/btnGet" android:layout_toRightOf="@id/imageView2" android:layout_below="@id/text">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_pro" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_pro" />
        </TextSwitcher>
        <Button android:id="@id/btnGet" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/get_pro_short" android:layout_alignParentRight="true" style="@android:style/Widget.Holo.Button.Small" />
    </RelativeLayout>
</LinearLayout>